--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -192,15 +192,16 @@
 }
 
 .textInput {
-  width: 75%;
+  width: 50%;
   background-color: transparent;
   border: 1px solid grey;
   border-radius: 8px;
   color: #fff;
-  height: 48px;
-  padding: 0 16px;
+  height: 36px;
+  text-align: right;
   font-size: 1rem;
-  margin-bottom: 16px;
+  margin-top: 8px;
+  margin-bottom: 0px;
 }
 
 .imageInput {
@@ -354,6 +355,18 @@
   gap: 16px;
 }
 
+.tokenOverview {
+  width: 35%;
+  height: 400px;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  gap: 16px;
+}
+
 .tokenLabel {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -368,6 +381,7 @@
   margin-top: 8px;
   margin-bottom: 0px;
   font-weight: 500;
+  width: 80%;
 }
 
 /* On Mobile, make tokenGrid 100% width */
